fixed val_fn to use val data, saving weights in ipynb

--- a/Lasagne - Conv Net - MAIN - Adam.ipynb
+++ b/Lasagne - Conv Net - MAIN - Adam.ipynb
@@ -197,7 +197,7 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
    ],
    "source": [
     "# Train the model.\n",
-    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, record_per_iter=record_per_iter)"
+    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, X_val, y_val, record_per_iter=record_per_iter)"
    ]
   },
   {
@@ -1406,7 +1406,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
