--- a/Lasagne - Conv Net-Multiple Batches-Adam.ipynb
+++ b/Lasagne - Conv Net-Multiple Batches-Adam.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -88,11 +88,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Data Set:', 'subset_48by32_5')\n",
+      "('Num classes:', 5)\n",
+      "Batches: [0, 1, 2]\n",
+      "Preparing Data Set....\n",
+      "X: (90000, 32, 48, 3)\n",
+      "Y: (90000,)\n",
+      "Y sample  [0 1 2 1 0 3 2 2 1 2]\n",
+      "('X_train', (72000, 3, 48, 32))\n",
+      "('y_train', (72000,))\n",
+      "('X_val', (9000, 3, 48, 32))\n",
+      "('y_val', (9000,))\n",
+      "('X_test', (9000, 3, 48, 32))\n",
+      "('y_test', (9000,))\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Data Set\n",
     "\n",
@@ -173,10 +193,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building network...\n",
+      "Building a complex CNN...\n",
+      "Compiling functions...\n",
+      "Using Update: adam\n",
+      "Compiling Finished!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create model and compile train and val functions\n",
-    "train_fn, val_fn = cnn_model.main_create_model(C, W, H, NUM_CLASSES, cnn_architecture=cnn_architecture, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, stride=stride_width, pad=padding, hidden_size=hidden_size, dropout=dropout_p, use_optimizer=USE_OPTIMIZER, learning_rate=LEARNING_RATE, momentum=MOMENTUM, beta1=beta1, beta2=beta2, epsilon=epsilon)"
+    "train_fn, val_fn, l_out = cnn_model.main_create_model(C, W, H, NUM_CLASSES, cnn_architecture=cnn_architecture, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, stride=stride_width, pad=padding, hidden_size=hidden_size, dropout=dropout_p, use_optimizer=USE_OPTIMIZER, learning_rate=LEARNING_RATE, momentum=MOMENTUM, beta1=beta1, beta2=beta2, epsilon=epsilon)"
    ]
   },
   {
@@ -189,7 +221,7 @@
    "outputs": [],
    "source": [
     "# Train the model.\n",
-    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, record_per_iter=record_per_iter)"
+    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, X_val, y_val, record_per_iter=record_per_iter)"
    ]
   },
   {
@@ -258,13 +290,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Save network weights"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Store params\n",
+    "model_filename = 'model_weights/' + DATA_SET + 'batch_' + str(USE_BATCH) + '_' + USE_OPTIMIZER + '.npz'\n",
+    "np.savez(model_filename, lasagne.layers.get_all_param_values(l_out))\n",
+    "\n",
+    "# To load\n",
+    "# with np.load(model_filename) as f:\n",
+    "    #     param_values = [f['arr_%d' % i] for i in range(len(f.files))]\n",
+    "    # lasagne.layers.set_all_param_values(network, param_values)"
+   ]
   }
  ],
  "metadata": {
