--- a/Lasagne - Conv Net-Multiple Batches.ipynb
+++ b/Lasagne - Conv Net-Multiple Batches.ipynb
@@ -232,13 +232,166 @@
       "Ep 0 \titer 2  \tloss 1.64202, train acc 20.80, val acc 24.80\n",
       "Ep 0 \titer 3  \tloss 1.65098, train acc 21.30, val acc 24.30\n",
       "Ep 0 \titer 4  \tloss 1.62432, train acc 23.30, val acc 24.20\n",
-      "Ep 0 \titer 5  \tloss 1.60675, train acc 20.30, val acc 26.70"
+      "Ep 0 \titer 5  \tloss 1.60675, train acc 20.30, val acc 26.70\n",
+      "Ep 0 \titer 6  \tloss 1.60608, train acc 25.60, val acc 25.40\n",
+      "Ep 0 \titer 7  \tloss 1.61813, train acc 21.60, val acc 22.40\n",
+      "Ep 0 \titer 8  \tloss 1.60392, train acc 22.50, val acc 27.30\n",
+      "Ep 0 \titer 9  \tloss 1.59925, train acc 22.10, val acc 25.70\n",
+      "Ep 0 \titer 10  \tloss 1.60243, train acc 24.50, val acc 25.30\n",
+      "Ep 0 \titer 11  \tloss 1.60119, train acc 23.20, val acc 25.50\n",
+      "Ep 0 \titer 12  \tloss 1.60173, train acc 24.50, val acc 25.50\n",
+      "Ep 0 \titer 13  \tloss 1.60239, train acc 23.40, val acc 25.80\n",
+      "Ep 0 \titer 14  \tloss 1.59885, train acc 25.10, val acc 24.90\n",
+      "Ep 0 \titer 15  \tloss 1.61471, train acc 22.00, val acc 24.10\n",
+      "Ep 0 \titer 16  \tloss 1.59759, train acc 23.60, val acc 26.30\n",
+      "Ep 0 \titer 17  \tloss 1.60098, train acc 25.80, val acc 24.90\n",
+      "Ep 0 \titer 18  \tloss 1.59406, train acc 26.10, val acc 26.40\n",
+      "Ep 0 \titer 19  \tloss 1.60077, train acc 23.30, val acc 24.10\n",
+      "Ep 0 \titer 20  \tloss 1.60651, train acc 24.40, val acc 26.80\n",
+      "Ep 0 \titer 21  \tloss 1.60842, train acc 24.40, val acc 24.50\n",
+      "Ep 0 \titer 22  \tloss 1.60281, train acc 23.90, val acc 25.60\n",
+      "Ep 0 \titer 23  \tloss 1.60617, train acc 23.70, val acc 25.10\n",
+      "Ep 0 \titer 24  \tloss 1.59848, train acc 23.60, val acc 24.10\n",
+      "Ep 0 \titer 25  \tloss 1.59758, train acc 24.20, val acc 25.10\n",
+      "Ep 0 \titer 26  \tloss 1.60068, train acc 24.40, val acc 25.20\n",
+      "Ep 0 \titer 27  \tloss 1.58977, train acc 26.20, val acc 27.00\n",
+      "Ep 0 \titer 28  \tloss 1.60005, train acc 24.10, val acc 24.20\n",
+      "Ep 0 \titer 29  \tloss 1.60477, train acc 24.20, val acc 24.00\n",
+      "Ep 0 \titer 30  \tloss 1.60117, train acc 24.60, val acc 24.80\n",
+      "Ep 0 \titer 31  \tloss 1.60041, train acc 24.60, val acc 23.70\n",
+      "Ep 0 \titer 32  \tloss 1.59942, train acc 23.10, val acc 24.40\n",
+      "Ep 0 \titer 33  \tloss 1.59858, train acc 23.50, val acc 23.80\n",
+      "Ep 0 \titer 34  \tloss 1.59661, train acc 22.80, val acc 23.70\n",
+      "Ep 0 \titer 35  \tloss 1.59234, train acc 25.40, val acc 26.40\n",
+      "Ep 0 \titer 36  \tloss 1.59550, train acc 26.00, val acc 25.30\n",
+      "Ep 0 \titer 37  \tloss 1.59504, train acc 24.60, val acc 24.70\n",
+      "Ep 0 \titer 38  \tloss 1.59668, train acc 24.30, val acc 25.20\n",
+      "Ep 0 \titer 39  \tloss 1.60403, train acc 23.00, val acc 23.30\n",
+      "Ep 0 \titer 40  \tloss 1.59058, train acc 25.80, val acc 26.60\n",
+      "Ep 0 \titer 41  \tloss 1.59110, train acc 26.80, val acc 26.40\n",
+      "Ep 0 \titer 42  \tloss 1.58458, train acc 29.00, val acc 28.10\n",
+      "Ep 0 \titer 43  \tloss 1.60805, train acc 24.20, val acc 24.20\n",
+      "Ep 0 \titer 44  \tloss 1.60007, train acc 23.60, val acc 24.30\n",
+      "Ep 0 \titer 45  \tloss 1.59212, train acc 25.20, val acc 25.80\n",
+      "Ep 0 \titer 46  \tloss 1.59312, train acc 24.50, val acc 25.00\n",
+      "Ep 0 \titer 47  \tloss 1.59426, train acc 23.00, val acc 23.90\n",
+      "Ep 0 \titer 48  \tloss 1.59355, train acc 25.00, val acc 27.00\n",
+      "Ep 0 \titer 49  \tloss 1.59966, train acc 24.30, val acc 24.40\n",
+      "Ep 0 \titer 50  \tloss 1.59617, train acc 25.60, val acc 25.70\n",
+      "Ep 0 \titer 51  \tloss 1.60078, train acc 23.80, val acc 24.00\n",
+      "Ep 0 \titer 52  \tloss 1.58689, train acc 25.10, val acc 25.70\n",
+      "Ep 0 \titer 53  \tloss 1.59773, train acc 25.70, val acc 25.50\n",
+      "Ep 0 \titer 54  \tloss 1.60012, train acc 23.10, val acc 24.00\n",
+      "Ep 0 \titer 55  \tloss 1.59438, train acc 24.90, val acc 25.60\n",
+      "Ep 0 \titer 56  \tloss 1.58995, train acc 26.00, val acc 26.20\n",
+      "Ep 0 \titer 57  \tloss 1.58404, train acc 26.40, val acc 26.50\n",
+      "Ep 0 \titer 58  \tloss 1.58230, train acc 25.30, val acc 25.60\n",
+      "Ep 0 \titer 59  \tloss 1.60628, train acc 23.50, val acc 25.80\n",
+      "Ep 0 \titer 60  \tloss 1.59534, train acc 24.10, val acc 25.00\n",
+      "Ep 0 \titer 61  \tloss 1.58968, train acc 23.90, val acc 26.00\n",
+      "Ep 0 \titer 62  \tloss 1.60243, train acc 23.80, val acc 24.20\n",
+      "Ep 0 \titer 63  \tloss 1.59710, train acc 25.60, val acc 25.30\n",
+      "Ep 0 \titer 64  \tloss 1.59888, train acc 23.30, val acc 23.40\n",
+      "Ep 0 \titer 65  \tloss 1.59340, train acc 27.70, val acc 28.40\n",
+      "Ep 0 \titer 66  \tloss 1.59654, train acc 24.70, val acc 24.80\n",
+      "Ep 0 \titer 67  \tloss 1.60731, train acc 22.80, val acc 22.70\n",
+      "Ep 0 \titer 68  \tloss 1.59673, train acc 23.10, val acc 23.30\n",
+      "Ep 0 \titer 69  \tloss 1.59031, train acc 23.50, val acc 24.20\n",
+      "Ep 0 \titer 70  \tloss 1.59356, train acc 24.30, val acc 24.50\n",
+      "Ep 0 \titer 71  \tloss 1.59483, train acc 25.70, val acc 25.50\n",
+      "Epoch 1 of 10 took 1102.841s\n",
+      "  training loss:\t\t1.600457\n",
+      "  training accuracy:\t\t24.21 %\n",
+      "  validation loss:\t\t1.591910\n",
+      "  validation accuracy:\t\t25.50 %\n",
+      "Ep 1 \titer 0  \tloss 1.57530, train acc 27.50, val acc 28.50\n",
+      "Ep 1 \titer 1  \tloss 1.60462, train acc 25.30, val acc 27.30\n",
+      "Ep 1 \titer 2  \tloss 1.59425, train acc 26.20, val acc 26.20\n",
+      "Ep 1 \titer 3  \tloss 1.59515, train acc 24.10, val acc 24.10\n",
+      "Ep 1 \titer 4  \tloss 1.57873, train acc 27.60, val acc 28.10\n",
+      "Ep 1 \titer 5  \tloss 1.59189, train acc 25.20, val acc 25.60\n",
+      "Ep 1 \titer 6  \tloss 1.58438, train acc 26.70, val acc 27.10\n",
+      "Ep 1 \titer 7  \tloss 1.58949, train acc 25.40, val acc 25.60\n",
+      "Ep 1 \titer 8  \tloss 1.57788, train acc 28.20, val acc 28.40\n",
+      "Ep 1 \titer 9  \tloss 1.59019, train acc 25.60, val acc 26.40\n",
+      "Ep 1 \titer 10  \tloss 1.58237, train acc 27.50, val acc 28.10\n",
+      "Ep 1 \titer 11  \tloss 1.59097, train acc 24.10, val acc 24.60\n",
+      "Ep 1 \titer 12  \tloss 1.59262, train acc 24.90, val acc 25.70\n",
+      "Ep 1 \titer 13  \tloss 1.59160, train acc 25.50, val acc 26.60\n",
+      "Ep 1 \titer 14  \tloss 1.59531, train acc 24.10, val acc 25.20\n",
+      "Ep 1 \titer 15  \tloss 1.59392, train acc 24.10, val acc 25.40\n",
+      "Ep 1 \titer 16  \tloss 1.58236, train acc 24.10, val acc 25.20\n",
+      "Ep 1 \titer 17  \tloss 1.59290, train acc 24.80, val acc 26.50\n",
+      "Ep 1 \titer 18  \tloss 1.59337, train acc 23.30, val acc 23.80\n",
+      "Ep 1 \titer 19  \tloss 1.59374, train acc 25.80, val acc 25.70\n",
+      "Ep 1 \titer 20  \tloss 1.58245, train acc 26.10, val acc 27.60\n",
+      "Ep 1 \titer 21  \tloss 1.57428, train acc 26.80, val acc 29.50\n",
+      "Ep 1 \titer 22  \tloss 1.58539, train acc 24.60, val acc 25.00\n",
+      "Ep 1 \titer 23  \tloss 1.58540, train acc 23.80, val acc 25.40\n",
+      "Ep 1 \titer 24  \tloss 1.58634, train acc 27.30, val acc 28.80\n",
+      "Ep 1 \titer 25  \tloss 1.58144, train acc 25.70, val acc 25.50\n",
+      "Ep 1 \titer 26  \tloss 1.58535, train acc 25.80, val acc 26.50\n",
+      "Ep 1 \titer 27  \tloss 1.59543, train acc 25.00, val acc 25.60\n",
+      "Ep 1 \titer 28  \tloss 1.59018, train acc 23.70, val acc 25.20\n",
+      "Ep 1 \titer 29  \tloss 1.59186, train acc 24.10, val acc 26.20\n",
+      "Ep 1 \titer 30  \tloss 1.57460, train acc 28.10, val acc 30.00\n",
+      "Ep 1 \titer 31  \tloss 1.60087, train acc 24.90, val acc 25.20\n",
+      "Ep 1 \titer 32  \tloss 1.57844, train acc 27.60, val acc 27.50\n",
+      "Ep 1 \titer 33  \tloss 1.58704, train acc 25.90, val acc 26.20\n",
+      "Ep 1 \titer 34  \tloss 1.58562, train acc 25.90, val acc 26.10\n",
+      "Ep 1 \titer 35  \tloss 1.60278, train acc 22.00, val acc 24.00\n",
+      "Ep 1 \titer 36  \tloss 1.58677, train acc 25.10, val acc 24.50\n",
+      "Ep 1 \titer 37  \tloss 1.58563, train acc 25.00, val acc 28.40\n",
+      "Ep 1 \titer 38  \tloss 1.59854, train acc 24.00, val acc 25.30\n",
+      "Ep 1 \titer 39  \tloss 1.58939, train acc 26.80, val acc 26.00\n",
+      "Ep 1 \titer 40  \tloss 1.59284, train acc 24.30, val acc 23.90\n",
+      "Ep 1 \titer 41  \tloss 1.59003, train acc 26.00, val acc 25.90\n",
+      "Ep 1 \titer 42  \tloss 1.59474, train acc 25.70, val acc 25.90\n",
+      "Ep 1 \titer 43  \tloss 1.59077, train acc 24.20, val acc 25.20\n",
+      "Ep 1 \titer 44  \tloss 1.58359, train acc 26.40, val acc 26.70\n",
+      "Ep 1 \titer 45  \tloss 1.59368, train acc 24.90, val acc 25.40\n",
+      "Ep 1 \titer 46  \tloss 1.59278, train acc 24.60, val acc 25.60\n",
+      "Ep 1 \titer 47  \tloss 1.59039, train acc 23.10, val acc 25.50\n",
+      "Ep 1 \titer 48  \tloss 1.58544, train acc 26.00, val acc 26.00\n",
+      "Ep 1 \titer 49  \tloss 1.58843, train acc 24.10, val acc 24.80\n",
+      "Ep 1 \titer 50  \tloss 1.58391, train acc 24.70, val acc 26.20\n",
+      "Ep 1 \titer 51  \tloss 1.58789, train acc 26.60, val acc 27.90\n",
+      "Ep 1 \titer 52  \tloss 1.57776, train acc 26.10, val acc 26.30\n",
+      "Ep 1 \titer 53  \tloss 1.60023, train acc 25.40, val acc 25.90\n",
+      "Ep 1 \titer 54  \tloss 1.57630, train acc 27.00, val acc 27.60\n",
+      "Ep 1 \titer 55  \tloss 1.59580, train acc 26.10, val acc 25.70\n",
+      "Ep 1 \titer 56  \tloss 1.59251, train acc 24.80, val acc 25.20\n",
+      "Ep 1 \titer 57  \tloss 1.57884, train acc 26.40, val acc 26.80\n",
+      "Ep 1 \titer 58  \tloss 1.58214, train acc 27.30, val acc 28.40\n",
+      "Ep 1 \titer 59  \tloss 1.59960, train acc 23.70, val acc 25.60\n",
+      "Ep 1 \titer 60  \tloss 1.58230, train acc 25.00, val acc 26.30\n",
+      "Ep 1 \titer 61  \tloss 1.59070, train acc 24.40, val acc 25.60\n",
+      "Ep 1 \titer 62  \tloss 1.59525, train acc 24.80, val acc 26.20\n",
+      "Ep 1 \titer 63  \tloss 1.58673, train acc 24.90, val acc 25.80\n",
+      "Ep 1 \titer 64  \tloss 1.58600, train acc 25.70, val acc 25.60\n",
+      "Ep 1 \titer 65  \tloss 1.58448, train acc 25.60, val acc 25.70\n",
+      "Ep 1 \titer 66  \tloss 1.59184, train acc 23.90, val acc 25.50\n",
+      "Ep 1 \titer 67  \tloss 1.58107, train acc 25.50, val acc 26.50\n",
+      "Ep 1 \titer 68  \tloss 1.59384, train acc 23.20, val acc 23.40\n",
+      "Ep 1 \titer 69  \tloss 1.59340, train acc 23.30, val acc 24.60\n",
+      "Ep 1 \titer 70  \tloss 1.59039, train acc 24.10, val acc 24.90\n",
+      "Ep 1 \titer 71  \tloss 1.59176, train acc 24.80, val acc 26.00\n",
+      "Epoch 2 of 10 took 1301.461s\n",
+      "  training loss:\t\t1.588670\n",
+      "  training accuracy:\t\t25.29 %\n",
+      "  validation loss:\t\t1.586409\n",
+      "  validation accuracy:\t\t26.00 %\n",
+      "Ep 2 \titer 0  \tloss 1.57478, train acc 26.90, val acc 26.90\n",
+      "Ep 2 \titer 1  \tloss 1.58207, train acc 27.40, val acc 26.90\n",
+      "Ep 2 \titer 2  \tloss 1.57470, train acc 26.10, val acc 27.00\n",
+      "Ep 2 \titer 3  \tloss 1.58426, train acc 24.70, val acc 25.60\n",
+      "Ep 2 \titer 4  \tloss 1.57958, train acc 28.50, val acc 29.00"
      ]
     }
    ],
    "source": [
     "# Train the model.\n",
-    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, record_per_iter=record_per_iter)"
+    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, X_val, y_val, record_per_iter=record_per_iter)"
    ]
   },
   {
