running more tests for conv net training for cnn country prediction

--- a/Lasagne - Conv Net-Multiple Batches-Adam-updated.ipynb
+++ b/Lasagne - Conv Net-Multiple Batches-Adam-updated.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
     "stride_width = 1 # can be integer or tuple\n",
     "padding = 'full'  # can be integer or tuple or 'full', 'same', 'valid'\n",
     "hidden_size = 256 # size of hidden layer of neurons\n",
-    "dropout_p = 0.0\n",
+    "dropout_p = 0.5\n",
     "# lr_decay = 0.995\n",
     "reg_strength = 0\n",
     "# grad_clip = 10\n",
@@ -82,13 +82,13 @@
     "\n",
     "# Training parameters\n",
     "batchsize = 1000\n",
-    "num_epochs = 8\n",
+    "num_epochs = 4\n",
     "record_per_iter = True  # save train and val loss/accuracy after each batch runthrough"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +208,7 @@
    ],
    "source": [
     "# Create model and compile train and val functions\n",
-    "train_fn, val_fn, l_out = cnn_model.main_create_model(C, W, H, NUM_CLASSES, cnn_architecture=cnn_architecture, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, stride=stride_width, pad=padding, hidden_size=hidden_size, dropout=dropout_p, use_optimizer=USE_OPTIMIZER, learning_rate=LEARNING_RATE, momentum=MOMENTUM, beta1=beta1, beta2=beta2, epsilon=epsilon)"
+    "train_fn, val_fn, pred_fn, l_out = cnn_model.main_create_model(C, W, H, NUM_CLASSES, cnn_architecture=cnn_architecture, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, stride=stride_width, pad=padding, hidden_size=hidden_size, dropout=dropout_p, use_optimizer=USE_OPTIMIZER, learning_rate=LEARNING_RATE, momentum=MOMENTUM, beta1=beta1, beta2=beta2, epsilon=epsilon)"
    ]
   },
   {
@@ -220,8 +220,11 @@
    },
    "outputs": [],
    "source": [
-    "# Train the model.\n",
-    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, X_val, y_val, record_per_iter=record_per_iter)"
+    "# Train the model. Save results in file\n",
+    "timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
+    "save_results_to_file = 'results/{}_batch_{}_{}_ep{}_num_train{}_{}.txt'.format(DATA_SET, str(USE_BATCH), USE_OPTIMIZER, num_epochs, num_train, timestr)\n",
+    "\n",
+    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, X_val, y_val, record_per_iter=record_per_iter, save_results_to_file=save_results_to_file)"
    ]
   },
   {
